--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fancyapps/ui": "^5.0.36",
     "maska": "^3.1.0",
+    "nouislider": "^15.8.1",
     "sass-embedded": "^1.85.1",
     "swiper": "^11.2.4",
     "vite-plugin-handlebars": "^2.0.0"
